8153413: Exceptions::_throw always logs exceptions, penalizing performance

Construct exception string into Event message directly add if (log_is_enabled) for logging.

Reviewed-by: ysuenaga, dholmes